--- a/example/06-editor/mdeditor/index.html
+++ b/example/06-editor/mdeditor/index.html
@@ -5,10 +5,31 @@
   <title>編輯器</title>
 </head>
 <body>
-<script>
-var editor = require('./editor')
-</script>
   <label id="filePath"></label><br/>
-  <textarea id="text" style="width:100%; height:80vh"></textarea>
+  <textarea id="mdSource" style="width:100%; height:80vh">
+# 陳鍾誠的課程
+
+欄位       |  內容
+----------|----------------------------
+課程名稱   | 視窗程式設計 (使用 electron.js)
+開課單位   | 金門大學資訊工程系
+開課年度   | 106 年上學期
+學員姓名   | 
+教師姓名   | 陳鍾誠
+上課教材   | [wiki](https://github.com/cccnqu/wp106a/wiki)
+程式範例   | [example](example)
+練習作業   | [exercise](exercise)
+專案作品   | [project](project)
+學習筆記   | [wiki](../../wiki)
+疑問解答   | [issue](https://github.com/cccnqu/wp106a/issues)    
+  </textarea>
+  <div id="mdHtml">
+    mdHtml
+  </div>
+  <script>
+    var E = require('./editor')
+  </script>
+  <button onclick="E.viewHtml()">View</button>
+  <button onclick="E.viewSource()">Source</button>
 </body>
 </html>
