--- a/example/06-editor/mdeditor/index.html
+++ b/example/06-editor/mdeditor/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>編輯器</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
   <button onclick="E.viewHtml()">View</button>
   <button onclick="E.viewSource()">Source</button>
   <label id="filePath"></label><br/>
-  <textarea id="mdSource" style="width:100%; height:80vh">
+  <textarea id="mdSource" style="width:95%; height:80vh">
 # 陳鍾誠的課程
 
 欄位       |  內容
