modify fileHistoryMenu from Menu to select

--- a/example/06-editor/mdeditor/index.html
+++ b/example/06-editor/mdeditor/index.html
@@ -11,6 +11,7 @@
 <!--    <li><a href="#home">Home</a></li> -->
     <li><a onclick="E.viewHtml()">View</a></li>
     <li><a onclick="E.viewSource()">Source</a></li>
+    <li><input type="text" value="Home" style="height:1em; width:10em; "> <button style="padding:5px 10px 5px 10px">Go</button></li>
     <li class="right"><a onclick="E.help()">Help</a></li>
   </ul>
   <select id="fileHistoryMenu" style="width:100%"></select>
